[package]
name = "filler"
version = "0.1.0"
edition = "2024"

[dependencies]
  tokio        = { version = "1", features = ["full"] }                                                                                                     
  reqwest      = { version = "0.12", features = ["json"] }                                                                                                  
  serde        = { version = "=1.0.219", features = ["derive"] }
  serde_json   = "1"                                                                                                                                        
  alloy        = { version = "0.14", features = ["full"] }                                                                                                  
  anyhow       = "1"                                                                                                                                        
  tracing      = "0.1"                                                                                                                                      
  tracing-subscriber = { version = "0.3", features = ["env-filter"] }                                                                                       
  dotenvy      = "0.15"  